[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anneal-memory"
version = "0.1.3"
description = "Two-layer memory for AI agents. Episodes compress into identity."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Phill Clapham", email = "phill@claphamdigital.com" },
]
keywords = [
    "ai",
    "agents",
    "memory",
    "mcp",
    "compression",
    "identity",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
engine = [
    "anthropic>=0.40.0",
]

[project.urls]
Homepage = "https://github.com/phillipclapham/anneal-memory"
Repository = "https://github.com/phillipclapham/anneal-memory"
Issues = "https://github.com/phillipclapham/anneal-memory/issues"

[project.scripts]
anneal-memory = "anneal_memory.server:main"

[tool.hatch.build.targets.wheel]
packages = ["anneal_memory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
