[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anneal-memory"
version = "0.2.2"
description = "Living memory for AI agents. Episodes compress into identity."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Phill Clapham", email = "phill@claphamdigital.com" },
]
keywords = [
    "ai",
    "agents",
    "memory",
    "mcp",
    "compression",
    "identity",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/phillipclapham/anneal-memory"
Repository = "https://github.com/phillipclapham/anneal-memory"
Issues = "https://github.com/phillipclapham/anneal-memory/issues"

[project.scripts]
anneal-memory = "anneal_memory.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["anneal_memory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = ["error::DeprecationWarning"]

[tool.mypy]
# Targets the library source only — tests use monkeypatching that
# mypy doesn't play well with and aren't worth the annotation tax.
# Run via `uvx mypy anneal_memory/` (no dev-dep required) or install
# mypy locally. This block exists to widen TypedDict key-typo
# protection from the two runtime drift tests
# (test_prepare_wrap_result_has_declared_keys /
# test_save_continuity_result_has_declared_keys) to all five
# declared shapes (PrepareWrapResult, SaveContinuityResult,
# WrapPackageDict, StalePatternDict, WrapSnapshot). See
# 10.5c.3 rationale in the session archive.
files = ["anneal_memory"]
python_version = "3.10"
# Not strict — the codebase is well-annotated but wasn't written
# with mypy as a gate. Starting strict would surface a large
# backlog of cosmetic findings; we start permissive and tighten
# incrementally as the codebase catches up.
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
# Check unannotated function bodies too so the TypedDict key-typo
# protection actually fires on helper functions, not just typed
# public API.
check_untyped_defs = true
